--- a/html/pfappserver/lib/pfappserver/I18N/en.po
+++ b/html/pfappserver/lib/pfappserver/I18N/en.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 6.5.9\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-04-14 11:06-0400\n"
+"PO-Revision-Date: 2017-04-18 14:12-0400\n"
 "Last-Translator: Inverse inc. <info@inverse.ca>\n"
 "Language-Team: English\n"
 "Language: en\n"
@@ -8571,7 +8571,7 @@ msgstr "locationlog Close On Accounting Stop"
 
 # conf/documentation.conf
 msgid "advanced.multihost"
-msgstr ""
+msgstr "Multihost"
 
 # conf/documentation.conf
 msgid "advanced.ntlm_redis_cache"
