--- a/docs/PacketFence_Brocade_Quick_Install_Guide.asciidoc
+++ b/docs/PacketFence_Brocade_Quick_Install_Guide.asciidoc
@@ -249,7 +249,7 @@ Under Security Configuration:
    AAA Policy: Select the Policy you just created in the previous step
    Encryption: Select Open
 
-Under Advanced Configuration:
+Under Network Configuration:
 
    RADIUS Dynamic Authorization: Select
 
@@ -270,7 +270,7 @@ Under Security Configuration:
    Encryption: Select WPA/WPA2-TKIP
    Fast Roaming: Unselect everything
 
-Under Advanced Configuration:
+Under Network Configuration:
 
    RADIUS Dynamic Authorization: Select
 
